# machine

./: .envrc  .gitignore  LICENSE  Makefile  README.hacker.am.md  README.hacker.ar.md  README.hacker.bn.md  README.hacker.ca.md  README.hacker.cs.md  README.hacker.da.md  README.hacker.de.md  README.hacker.el.md  README.hacker.es.md  README.hacker.fa.md  README.hacker.fi.md  README.hacker.fr.md  README.hacker.grc.md  README.hacker.gu.md  README.hacker.ha.md  README.hacker.he.md  README.hacker.hi.md  README.hacker.hu.md  README.hacker.id.md  README.hacker.it.md  README.hacker.ja.md  README.hacker.jam.md  README.hacker.jv.md  README.hacker.km.md  README.hacker.kn.md  README.hacker.ko.md  README.hacker.la.md  README.hacker.ml.md  README.hacker.mr.md  README.hacker.my.md  README.hacker.ne.md  README.hacker.nl.md  README.hacker.no.md  README.hacker.pa.md  README.hacker.pl.md  README.hacker.pt.md  (+137 more)
.claude/: settings.local.json
case-studies/: cold-war.md  cuban-missle-crisis.md
examples/: nvidia-fuck-you.md
schema/: quotes.schema.json
src/machine/: __init__.py  languages.py  prompt.py  providers.py  schema.py  spec.py  transpile.py  util.py
tests/functional/: test_transpile.py
